# Programming-Engineering

./: README.md
1 hw/: README.md  workspace.dsl
2 hw/: QUICK_START.md  README.md  STUDENT_REPORT.md  TASK_INFO.md
2 hw/email-service/: CMakeLists.txt  Dockerfile  docker-compose.yaml  init-db.sql  nginx.conf
2 hw/email-service/configs/: static_config_folder.yaml  static_config_message.yaml  static_config_user.yaml
2 hw/email-service/data/: email.db  email.db-shm  email.db-wal
2 hw/email-service/src/auth/: jwt_auth_factory.cpp
2 hw/email-service/src/common/: database.cpp  database.hpp
2 hw/email-service/src/folder/: handlers.cpp  handlers.hpp  main.cpp
2 hw/email-service/src/message/: handlers.cpp  handlers.hpp  main.cpp
2 hw/email-service/src/user/: handlers.cpp  main.cpp
2 hw/email-service/swagger/: index.html
2 hw/email-service/tests/: conftest.py  test_folder_service.py  test_user_service.py
3 hw/: README.md
3 hw/email-service/: Dockerfile  openapi.yaml  optimization.md
3 hw/email-service/configs/: static_config_folder_test.yaml
3 hw/email-service/src/common/: database.cpp  database.hpp  models.hpp
3 hw/email-service/src/folder/: main.cpp
3 hw/email-service/src/message/: handlers.cpp  main.cpp
3 hw/email-service/src/user/: handlers.cpp  handlers.hpp
3 hw/email-service/tests/: conftest.py  test_folder_service.py
4 hw/: QUICK_START.md  TASK_INFO.md
4 hw/email-service/: CMakeLists.txt  Dockerfile  data.sql  docker-compose.test.yaml  docker-compose.yaml  init-db.sql  init-mongo.js  queries.js  queries.sql  schema.sql
4 hw/email-service/configs/: static_config_folder.yaml  static_config_message.yaml  static_config_message_test.yaml  static_config_user.yaml  static_config_user_test.yaml
4 hw/email-service/src/auth/: jwt_auth_checker.cpp
4 hw/email-service/src/common/: database.cpp  database.hpp  models.cpp  models.hpp
4 hw/email-service/src/folder/: handlers.cpp  main.cpp
4 hw/email-service/src/message/: handlers.cpp  main.cpp
4 hw/email-service/src/user/: handlers.hpp  main.cpp
4 hw/email-service/tests/: conftest.py  requirements.txt  test_folder_service.py  test_message_service.py  test_user_service.py
5 hw/: QUICK_START.md  README.md  performance_design.md
5 hw/email-service/: CMakeLists.txt  data.js  docker-compose.yaml  nginx.conf  openapi.yaml  schema_design.md  validation.js
5 hw/email-service/configs/: dynamic_config_fallback.json  static_config_folder.yaml  static_config_message.yaml  static_config_mongo.yaml  static_config_user.yaml
5 hw/email-service/monitoring/grafana/dashboards/: cache-rate-limiting-simple.json  userver-services.json
5 hw/email-service/monitoring/grafana/provisioning/dashboards/: dashboard.yml
5 hw/email-service/monitoring/prometheus/: alerts.yml  prometheus.yml
5 hw/email-service/src/auth/: jwt_auth_factory.hpp
5 hw/email-service/src/common/: cache_component.hpp  metrics_handler.cpp  metrics_handler.hpp  mongo_component.hpp  rate_limiter.hpp
5 hw/email-service/src/folder/: handlers.cpp  handlers.hpp  main.cpp
5 hw/email-service/src/message/: main.cpp
5 hw/email-service/src/user/: handlers.cpp  handlers.hpp  main.cpp
5 hw/email-service/tests/: load_test.sh  test_cache_rate_limiting.sh
5 hw_warm-up/: QUICK_START.md  README.md  TASK_INFO.md
5 hw_warm-up/email-service/: docker-compose.test.yaml  docker-compose.yaml
5 hw_warm-up/email-service/src/auth/: jwt_auth_factory.cpp
5 hw_warm-up/email-service/src/common/: models.cpp
5 hw_warm-up/email-service/src/folder/: main.cpp
5 hw_warm-up/email-service/src/user/: handlers.cpp  main.cpp
